--- a/thesis/content/chapter-introduction.tex
+++ b/thesis/content/chapter-introduction.tex
@@ -1,9 +1,9 @@
 \chapter{Introduction}
 
 
-Humanoid Robotics, Imitation Learning, and Virtual Reality (VR) are some of the most exciting and rapidly developing fields in technology today. It is perhaps no surprise that the marriage of these three technologies can have far-reaching impacts. Using VR, humans can control robots in an immersive simulation, or they can remotely teleoperate robots to perform dangerous tasks. The trajectories from the human demonstrations can then be used to train Imitation Learning policies, which can enable robots to perform tasks autonomously. While deep Reinforcement Learning methods have been successful in teaching robot to learn from repeated interactions with an environment given a reward function, the sample inefficiency, need for online interactions, and difficulty in reward engineering make them impractical to implement in a humanoid platform. On the other hand, imitation learning skips over the requirement to create reward functions to shape a behavior and instead lets the robot learn directly from offline demonstrations.
+Humanoid Robotics, Imitation Learning, and Virtual Reality (VR) are some of the most exciting and rapidly developing fields in technology today. Humanoid robots developed by Agility Robotics can be used for last-mile delivery. Imitation Learning shows great promise in robotics and autonomous driving. VR is ushering in a new world called the "metaverse". While each technology is important in its own right, we believe that the marriage of these three technologies can also have far-reaching impacts. Using VR, humans can control robots in an immersive simulation, or they can remotely teleoperate robots to perform tasks in dangerous areas such as a nuclear plant. The trajectories from the human demonstrations can then be used to train Imitation Learning policies, which can enable robots to perform the same tasks autonomously. While deep Reinforcement Learning methods have been successful in teaching robot to learn from repeated interactions with an environment given a reward function, the sample inefficiency, need for online interactions, and intricacy of reward engineering make them difficult to implement in a humanoid platform. On the other hand, imitation learning skips over the requirement to create reward functions to shape a behavior and instead lets the robot learn directly from offline demonstrations. 
 
-However, due to the complexity of humanoid robots, the lack of large-scale data for training, and the difficulty of creating an intuitive interface for humans to control robots, there has been no research on teaching humanoid robots to perform locomotion and bi-manipulation tasks, as far as I'm aware. There has been work to teach fixed-base robot arms through VR demonstrations \cite{zhang2018deep}, but humanoid robots are significantly more difficult to train due to the need to consider robot dynamics for balancing and walking. Also, although there is a large body of work on teleoperating humanoids using VR and motion capture devices, I have not found any attempt to use the teleoperation data to train a neural network policy to control the humanoid autonomously. Furthermore, these "telepresence" systems are usually very complicated and require expensive hardware, which makes them unsuitable for scaling up data collection in a distributed manner.
+However, due to the complexity of humanoid robots, the lack of large-scale data for training, and the difficulty of creating an intuitive interface for data collection, there has been no research on teaching humanoid robots to perform locomotion and bi-manipulation tasks to our best knowledge. There has been work to teach fixed-base robot arms through VR demonstrations \cite{zhang2018deep}, but humanoid robots are significantly more difficult to train due to the need to consider robot dynamics for balancing and walking. Also, although there is a large body of work on teleoperating humanoids using VR and motion-capture devices, there has been no attempt in literature to use the teleoperation data to train a neural network policy to control the humanoid autonomously. Furthermore, these "telepresence" systems are usually very complicated and require expensive hardware, which makes them unsuitable for scaling up data collection in a distributed manner.
 
 \begin{figure}
 	\centering
@@ -13,7 +13,7 @@ However, due to the complexity of humanoid robots, the lack of large-scale data 
     \label{fig:simreal}
 \end{figure}
 
-In this thesis, I present a simple VR interface that uses the commonplace Oculus Quest 2 headset. I believe that compared to other humanoid teleoperation systems, the software architecture used in this project is uniquely positioned to be both adaptable to VR games and accessible to the public. Although the interface is simple, it is powerful enough to teach a humanoid robot to perform some simple tasks. In simulation, I hypothesize that this setup can be incorporated in VR video games to massively scale up data collection. VR games contain rich interactions with the virtual world, have built-in rewards to label successes and failures, and integrate with powerful physical simulation engines. As a result, they are perfect for collecting human demonstrations to potentially teach humanoids to perform the same tasks in the real world. For example, Cook-Out is a VR game that requires players to cook in a kitchen, which is a valuable skill for humanoids to learn. In addition, on the real-robot side, we could potentially distribute the data collection by letting users with VR headsets control the robot remotely. This is similar to the RoboTurk crowd-sourcing platform for fixed-base arm robots \cite{mandlekar2018roboturk}. I hope that by open-sourcing the teleoperation codebase later this summer, research in humanoid robot learning can be made more accessible. 
+In this thesis, I present a simple VR interface that uses the commonplace Oculus Quest 2 headset. I believe that compared to other humanoid teleoperation systems, the software architecture used in this project is uniquely positioned to be both adaptable to VR games and accessible to the public. Although the interface is relatively simple, it is sufficient to teach a humanoid robot to perform some simple tasks. In simulation, I hypothesize that this setup can be incorporated in VR video games to massively scale up data collection. VR games contain rich interactions with the virtual world, have built-in rewards to label successes and failures, and integrate with powerful physical simulation engines. As a result, they are perfect for collecting human demonstrations to potentially teach humanoids to perform the same tasks in the real world. For example, Cook-Out is a VR game that requires players to cook in a kitchen, which is a valuable skill for humanoids to learn. In addition, on the real-robot side, we could potentially distribute the data collection by letting users with VR headsets control the robot remotely. This is similar to the RoboTurk crowd-sourcing platform for fixed-base robot arms \cite{mandlekar2018roboturk}. I hope that by open-sourcing the teleoperation codebase later this summer, research in humanoid robot learning can be made more accessible. 
 
 To show that we can use the collected demonstrations to train a humanoid to perform simple tasks, we present a hierarchical approach that learns a motion policy from teleoperation demonstrations with an underlying controller. The policy outputs the desired poses of the hands, while the whole-body controller takes care of balancing the robot and tracking the desired trajectory. An overview of this design is presented in Figure \ref{fig:overview}, and a description is given below:
 \begin{figure}
@@ -23,9 +23,9 @@ To show that we can use the collected demonstrations to train a humanoid to perf
     \label{fig:overview}
 \end{figure}
 \begin{enumerate}
-    \item First, we take advantage of the similar kinematic structures between the robot and demonstrators and collect demonstrations using immersive VR. 
-We only record the SE(3) poses of the hands and abstract away the other joint configurations. This lets us easily retarget human motions to the humanoid robot, which has fewer degrees of freedom in the arms. This also makes it easier for learning, since the policy can delegate joint-space controls to the underlying controller. 
-\item Then, we send the desired hand trajectories and walking commands to the whole-body controller to produce joint-torque actions of the robot. The controller prioritizes the robot's stability while tracking the hand and feet trajectories, so it may not track the trajectories perfectly. However, the human demonstrator can adapt to the tracking error by observing the effects of their actions in the VR headset. The walking commands are implemented with a sequence-based DCM gait planner, which allows the user to take a step or turn the robot in one of the four directions by clicking a button. Since these commands are discrete, the locomotion is not very fluid or precise. 
+    \item First, we take advantage of the similar kinematic structures between the robot and demonstrators to collect demonstrations using immersive VR. 
+We only track the SE(3) poses of the hands and abstract away the other joint configurations. This lets us retarget human motions to the humanoid robot, which has fewer degrees of freedom in the arms. This also makes it easier for learning, since the policy can delegate joint-space controls to the underlying controller. Even though human's 7-DOF arm could produce motions that cause singularity issues at the robot's 6-DOF arm, this can be easily corrected by the demonstrator. 
+\item Then, we send the desired hand trajectories and walking commands to the whole-body controller to produce joint-torque actions of the robot. The controller prioritizes the robot's stability while tracking the hand and feet trajectories, so it may not track the trajectories perfectly. However, the human demonstrator can adapt to the tracking error by observing the effects of their actions in the VR headset. The walking commands are implemented with a sequence-based DCM gait planner, which allows the user to take a step in one of the four directions or make a turn by clicking a button. Since these commands are discrete, the locomotion is not very fluid or precise. 
 \item Finally, a behaviorial cloning policy is trained to imitate the human demonstrations. The policy needs to learn the state-action distribution of whole-body control behaviors and adapt to it in a closed-loop manner similar to the human. During deployment, the generated trajectories are passed to whole-body control just like during demonstration. The policy achieves reasonable success rate in simple simulation tasks, but it has low success rate for more complex tasks involving loco-manipulation (manipulation and locomotion at the same time) and precise motions. Future research directions to improve the policy will be discussed in the end. 
 \end{enumerate}
 
@@ -37,7 +37,7 @@ Humanoid robots have gained a lot of attention in recent years. After Boston Dyn
 This interest in humanoids is justified by their versatility and social capabilities. Humanoids can be used as personal assistants, companions for the elderly, workers in factories, and first responders in disaster zones. The morphology of humanoids enables them to easily adapt to the human-centered world that we live in. Every tool, every building, and every task in our society are designed for the human form. It wouldn't make sense to redesign power tools or get rid of stairs for the convenience of robots, so creating robots that can take advantage of the existing infrastructure made for humans is extremely valuable. Also, as humans, it's easier to provide demonstrations to a robot that has a similar form as us, rather than having to train our brain to adapt to the morphology of the robot.
 
 \section {VR Teleoperation Interface}
-In order for imitation learning to succeed on robots, high-quality demonstrations are essential. Using a VR interface is desirable since it closes the observation and embodiment gap. Namely, instead of looking at the robot externally, the human will have the same viewpoint as the robot. Instead of having to map the human body's joints to the robot's joints, the human is directly controlling the robot's joints. Because of the human brain's impressive capability to adapt, the demonstrator can quickly learn to treat the arms of the robot as their own arms, and perform tasks intuitively as they do in their own body. Indeed, there are various experiments that shows that humans can start to take ownership of their virtual body, even if the body is very different from their own, if appropriate multisensory correlations are provided \cite{10.3389/fnhum.2015.00141} \cite{10.3389/neuro.09.006.2008}. 
+In order for imitation learning to succeed on robots, high-quality demonstrations are essential. Using a VR interface is desirable since it closes the observation and embodiment gap. Namely, instead of looking at the robot externally, the human will have the same viewpoint as the robot. Instead of having to map the human body's joints to the robot's joints, the human is directly controlling the robot's joints. Because of the human brain's impressive capability to adapt, the demonstrator can quickly learn to treat the arms of the robot as their own arms, and perform tasks intuitively as they do in their own body. Indeed, there are various experiments that show that humans can start to take ownership of their virtual body, even if the body is very different from their own, if appropriate multisensory correlations are provided \cite{10.3389/fnhum.2015.00141} \cite{10.3389/neuro.09.006.2008}. 
 
 In addition, since humanoid robots have to maintain balance while following hand trajectories, the whole-body controller may fail to track the hand trajectory perfectly. So, in order to move the robot hand to a desired position, one needs to constantly observe the effects of their actions before deciding where to move next. In experiments, we notice that humans are great at adapting to the whole-body control's tracking error in this closed-loop manner. By using the VR interface, we are essentially borrowing the human brain's power to solve the embodiment mismatch issue and perform closed-loop actions. 
 
