--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -298,3 +298,23 @@ ISSN={1662-5161},
       archivePrefix={arXiv},
       primaryClass={cs.RO}
 }
+
+@INPROCEEDINGS{6386109,
+  author={Todorov, Emanuel and Erez, Tom and Tassa, Yuval},
+  booktitle={2012 IEEE/RSJ International Conference on Intelligent Robots and Systems}, 
+  title={MuJoCo: A physics engine for model-based control}, 
+  year={2012},
+  volume={},
+  number={},
+  pages={5026-5033},
+  doi={10.1109/IROS.2012.6386109}}
+
+
+@misc{wang2023dshape,
+      title={D-Shape: Demonstration Shaped Reinforcement Learning via Goal Conditioning}, 
+      author={Caroline Wang and Garrett Warnell and Peter Stone},
+      year={2023},
+      eprint={2210.14428},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
